<resources>
    <string name="app_name">IZON DC</string>
    <string name="internet_not_available">Internet Not Available</string>
    <string name="permission_label">permission</string>
    <string name="write_external_storage_title">write external storage title</string>
    <string name="allow_location_permission">allow location permission</string>
    <string name="allow_setting_permission">allow setting permission</string>
    <string name="welcome_to_izon_360_total_course_technology">Welcome to IZONGOLF Total Course Technology</string>
    <string name="wifi_connection_message">Please connect to a network</string>
    <string name="connected">Connected</string>
    <string name="current_network">Current Network</string>
    <string name="available_networks">WiFi Networks Available</string>
    <string name="wifi_turned_off">WiFi turned-off</string>
    <string name="do_you_want_to_turn_it_on">Do you want to turn it on?</string>
    <string name="wifi_scanning">WiFi Scanning…</string>
    <string name="refresh_list">Refresh List</string>
    <string name="confirm">Confirm</string>
    <string name="software_download">begin software download</string>
    <string name="wifi_connect">Wifi Connect</string>
    <string name="do_you_want_to_connect_wifi">Do you want to connect wifi %1$s</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="enter_facility_code">Please enter your facility code</string>
    <string name="dont_know_pin">I don\'t have a code</string>
    <string name="enter_cart_number">Enter the Cart number for the screen</string>
    <string name="please_confirm_facility">Please confirm your facility information below.</string>
    <string name="golf_complex">Wigwam Resort Golf Complex</string>
    <string name="golf_complex_des">1234 Ajo way, attn: Golf Shop\n Litchfield Park, AZ 84315</string>
    <string name="info">You can make adjustments to the above information later in the IZON 360  Control Panel</string>
    <string name="wifi_fragment">Wifi Fragment\n</string>
    <string name="facility_pin_code_fragment">Facility Pin Code Fragment</string>
    <string name="setting_up">Setting Up</string>
    <string name="cart_code">Cart Code</string>
    <string name="sim_activiation">Sim Activation</string>
    <string name="download_app">download Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activating_sim">Activating SIM</string>

    <string name="dialog_miui_permissions_title">MIUI requires manual setup of custom permissions. App permissions window will now open. Tap \"Other permissions\", allow \"Display pop-up windows while running in the background\" and click \"Back\".</string>
    <string name="downloading_software">Downloading Course Images</string>
    <string name="download_completed">Download Completed...</string>
    <string name="remaining_calculating">Remaining: Calculating...</string>
    <string name="password">Password</string>
    <string name="please_enter_wifi_password">Please enter wifi password</string>
    <string name="connect">Connect</string>
    <string name="allow_storage_permission">allow storage permission</string>
    <string name="connecting">connecting</string>
    <string name="connecting_label">Connecting</string>
    <string name="wifi_is_not_on">Wi-Fi is turned off</string>
    <string name="turn_on_wifi">Turn on Wi-Fi</string>
    <string name="un_zip_file">Extracting Files...</string>
    <string name="no_internet_waiting_for_network">No internet connection detected. Please check your connection and wait for a stable network.</string>
    <string name="loading">Loading...</string>
    <string name="facility_code_dont_message">Your facility code helps IZON remotely validate your facility and download the correct course map, hole renderings, and scorecard data.\n\nContact your facility administrator to obtain your Facility Code. \n\nIf you need assistance, contact our support desk at 877-791-4966</string>
    <string name="please_try_again">Please try again</string>
    <string name="downloading_ads_content">Downloading Ads Content</string>
    <string name="enable_kiosk">Enable Kiosk</string>
    <string name="disable_kiosk">Disable Kiosk</string>
    <string name="service_name">Key Capture</string>
    <string name="enter_a_pin_to_exit_kiosk_mode">Enter your pin to exit kiosk mode</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="allow_phone_permission">allow location permission</string>
    <string name="remaining">Remaining</string>
    <string name="please_enter_pin">Please Enter pin</string>
    <string name="please_enter_correct_pin">Please Enter correct pin</string>
    <string name="version">version</string>
    <string name="update">Update</string>
    <string name="install_apk">Installing Software\n</string>
    <string name="download_install"><![CDATA[Download & install]]></string>
    <string name="dc_update_message">Updating to latest version of IZON DC V</string>
    <string name="izon_golf_update_message">Updating to latest version of IZON GOLF V</string>
    <string name="exit_kiosk">Exit Kiosk</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="upload_log">File Upload</string>
    <string name="do_you_really_want_to_erase_all_course_data">Do you really want to erase all course data?</string>
    <string name="file_uploaded_successfully">File uploaded successfully</string>
    <string name="update_time">Update Time</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="sim_network">Cellular Networks Available</string>
    <string name="not_connected">Not Connected</string>
    <string name="use_cellular_network">Use Cellular Network</string>
</resources>