<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="horizontal"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:cardBackgroundColor="@color/bg_color"
        app:cardCornerRadius="@dimen/_8sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message"
                style="@style/TextLato14ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/enter_a_pin_to_exit_kiosk_mode"
                tools:text="@string/enter_a_pin_to_exit_kiosk_mode" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                style="@style/TextLato14ssp"
                android:background="@drawable/background_pw_dialog"
                android:hint="@string/enter_pin"
                android:inputType="numberPassword"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCancel"
                    style="@style/TextLato14ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <View
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtOk"
                    style="@style/TextLato14ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</LinearLayout>